--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <script>
     $(function () {
-      var size = document.getElementById("about").offsetTop - 100;
       $(document).scroll(function () {
-        $('nav').toggleClass('scrolled', $(this).scrollTop() > size);
+        $('nav').toggleClass('scrolled', $(this).scrollTop() > window.innerHeight);
       });
-});
-
+    });
   </script>
-
 </body>
 </html>
